# streamlit-assistant

./: .gitignore  app.py  chatbot.py  complaints_analysis_notebook.ipynb  court_listener_oral_argument_listing.xlsx  example_case_parties.xlsx  example_case_topics.xlsx  main.py  pyproject.toml  requirements.txt  scratch.ipynb  setup.sh  web_search.ipynb
pages/: 01_Vision.py  02_Scattergories.py  03_Scattergories_Example.py
transcriptions/: City_of_Lincoln_v_FERC.txt  lm_sample_oral_arg.txt
