[tool.poetry]
name = "streamlit-assistant"
version = "0.1.0"
description = "A helpful assistant built with OpenAI & Streamlit"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.28.2"
openai = "^1.2.0"
beautifulsoup4 = "^4.10.0"
requests = "^2.26.0"
html2text = "^2020.1.16"
langchain = "^0.0.337"
python-dotenv = "^1.0.0"
openpyxl = "^3.1.2"
chromadb = "^0.4.17"
instructor = "^0.3.4"
matplotlib = "^3.8.2"
duckduckgo-search = "^3.9.6"
google-api-python-client = "^2.108.0"
reportlab = "^4.0.7"
pillow = "^10.1.0"
markdown = "^3.5.1"
faiss-cpu = "^1.7.4"
tqdm = "^4.66.1"
backoff = "^2.2.1"
tiktoken = "^0.5.1"
tabulate = "^0.9.0"
metaphor-python = "^0.1.23"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

